GNOME Bugzilla – Bug 707150
No error given
Last modified: 2013-09-10 08:50:21 UTC
Is it any reason why theese string a different? #: ../src/tracker-control/tracker-control-general.c:136 #: ../src/tracker-control/tracker-control-general.c:698 #: ../src/tracker-control/tracker-control-general.c:744 #: ../src/tracker-control/tracker-control-general.c:765 msgid "no error given" #: ../src/miners/rss/tracker-main.c:114 #: ../src/tracker-utils/tracker-import.c:110 #: ../src/tracker-utils/tracker-info.c:384 #: ../src/tracker-utils/tracker-search.c:1663 #: ../src/tracker-utils/tracker-sparql.c:480 #: ../src/tracker-utils/tracker-stats.c:87 #: ../src/tracker-utils/tracker-tag.c:900 msgid "No error given" #: ../src/plugins/nautilus/tracker-tags-view.c:241 #: ../src/tracker-needle/tracker-tags-view.vala:159 msgid "No error was given" More work for translators
commit 6aff0c20df347b7c9fe0f399ab83039d09e1c97b Author: Martyn Russell <martyn@lanedo.com> Date: Tue Sep 10 09:49:14 2013 +0100 build: Unify variations of "no error given" to save translators work https://bugzilla.gnome.org/show_bug.cgi?id=707150