build: Unify variations of "no error given" to save translators work

https://bugzilla.gnome.org/show_bug.cgi?id=707150